# qtile-swallower

./: LICENSE  README.md  requirements.txt  setup.cfg
src/qtile_swallow/: __init__.py  _conf.py  _swallow.py  _window_predicate.py  window_predicate.py
