[metadata]
name = qtile-swallower
version = 0.0.1
author = Alex Marcat
author_email = malexprojects@gmail.com
description = A nice interface for window swallowing in Qtile window manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Malex/qtile-swallower
classifiers = 
  Programming Language :: Python :: 3
  Environment :: X11 Applications
  Operating System :: POSIX :: Linux
  Development Status :: 3 - Alpha
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: Apache Software License
  Topic :: Desktop Environment :: Window Managers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    qtile
    psutil

[options.packages.find]
where = src

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests
